[gd_scene load_steps=13 format=2]

[ext_resource path="res://qn8kKPkSkEQZWgQvA51oyOlYDY7q2bpXbJ3vHAoDKF0LAEPf76eC6TI3XxkAOgtpDiPgueiaHTQfywcbq8OV_4R4.jpg" type="Texture" id=1]
[ext_resource path="res://Game/Enemy44.gd" type="Script" id=2]
[ext_resource path="res://Anims/Акира/anim1.png" type="Texture" id=3]
[ext_resource path="res://Anims/Акира/anim2.png" type="Texture" id=4]
[ext_resource path="res://Anims/Акира/anim3.png" type="Texture" id=5]
[ext_resource path="res://Anims/Акира/anim4.png" type="Texture" id=6]
[ext_resource path="res://Anims/Акира/anim5.png" type="Texture" id=7]
[ext_resource path="res://Anims/Акира/anim6.png" type="Texture" id=8]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolVector2Array( 0, 0, -8, 0, -8, 22, -1, 22, -1, 14, 0, 14, 0, 22, 6, 22, 6, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "щгп"
length = 0.24
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.09, 0.16, 0.22 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( 0, -8, -11, -8, -11, 22, -1, 22, -1, 14, 0, 14, 0, 22, 8, 22, 8, -8 ), PoolVector2Array( 0, -8, -11, -8, -11, 14, -1, 14, -1, 14, 0, 14, 0, 22, 8, 22, 8, -8 ), PoolVector2Array( 0, -8, -11, -8, -11, 22, -1, 22, -1, 14, 0, 14, 0, 14, 8, 14, 8, -8 ), PoolVector2Array( 0, -8, -11, -8, -11, 22, -1, 22, -1, 14, 0, 14, 0, 22, 8, 22, 8, -8 ) ]
}

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18, 38 )

[node name="Akira" type="KinematicBody2D"]
position = Vector2( 330, 163 )
z_index = 3
collision_layer = 8
collision_mask = 8
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -0.5625, 1 )
scale = Vector2( 0.625001, 1 )
polygon = PoolVector2Array( 0, -8, -11, -8, -11, 22, -1, 22, -1, 14, 0, 14, 0, 22, 8, 22, 8, -8 )
one_way_collision_margin = 12.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CollisionPolygon2D"]
reset_on_save = false
anims/RESET = SubResource( 4 )
"anims/щгп" = SubResource( 5 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.25, 6 )
scale = Vector2( 0.208, 0.208 )
frames = SubResource( 1 )
animation = "run"
frame = 4

[node name="HP_Enemy_1" type="TextureProgress" parent="."]
margin_left = -29.0
margin_top = -30.0
margin_right = 201.0
margin_bottom = -8.0
rect_scale = Vector2( 0.25, 0.25 )
max_value = 500.0
value = 500.0
texture_progress = ExtResource( 1 )
tint_progress = Color( 1, 0, 0, 1 )
nine_patch_stretch = true

[node name="Timer_Of_HP" type="Timer" parent="HP_Enemy_1"]
autostart = true

[node name="Mana_Enemy_1" type="TextureProgress" parent="."]
margin_left = -29.0
margin_top = -25.0
margin_right = 201.0
margin_bottom = -3.0
rect_scale = Vector2( 0.25, 0.25 )
max_value = 250.0
value = 250.0
texture_progress = ExtResource( 1 )
tint_progress = Color( 0, 0.133333, 1, 1 )
nine_patch_stretch = true

[node name="Timer_Of_Mana" type="Timer" parent="Mana_Enemy_1"]
autostart = true

[node name="value_of_HP" type="Label" parent="."]
margin_left = -7.0
margin_top = -31.0
margin_right = 21.0
margin_bottom = 17.0
rect_scale = Vector2( 0.5, 0.5 )
text = "500

"

[node name="value_of_Mana" type="Label" parent="."]
margin_left = -7.0
margin_top = -25.0
margin_right = 33.0
margin_bottom = 23.0
rect_scale = Vector2( 0.5, 0.5 )
text = "250

"

[node name="Trigger_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger_Area"]
position = Vector2( -1, -6 )
shape = SubResource( 3 )
one_way_collision_margin = 0.0

[node name="Dialoge_Window_Position" type="Position2D" parent="."]
position = Vector2( 10, -43 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1, 2 )

[connection signal="timeout" from="HP_Enemy_1/Timer_Of_HP" to="." method="_on_Timer_Of_HP_timeout"]
[connection signal="timeout" from="Mana_Enemy_1/Timer_Of_Mana" to="." method="_on_Timer_Of_Mana_timeout"]
[connection signal="body_entered" from="Trigger_Area" to="." method="_on_Trigger_Area_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
